[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Cacophony.gd" type="Script" id=1]
[ext_resource path="res://assets/images/body.png" type="Texture" id=2]
[ext_resource path="res://scenes/ProgressBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Grid.tscn" type="PackedScene" id=4]

[node name="Cacophony" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Grid" parent="." instance=ExtResource( 4 )]
position = Vector2( 31, 111 )

[node name="ProgressBar" parent="." instance=ExtResource( 3 )]
position = Vector2( 38, 395 )

[node name="WinTimer" type="Timer" parent="."]
one_shot = true

[connection signal="fail" from="Grid" to="." method="_on_Grid_fail"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
